# nietzschian-debugger

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: settings.local.json
.specify/memory/: constitution.md
history/prompts/1-debug-mode/: 002-debug-mode-feature-specification.spec.prompt.md  003-debug-mode-spec-clarification.spec.prompt.md  005-anthropic-sdk-research.general.prompt.md  (+3 more)
nietzschian_debugger/: __init__.py  cli.py  types.py
nietzschian_debugger/commands/: debug.py
nietzschian_debugger/core/: context_manager.py  session.py  session_loop.py
nietzschian_debugger/llm/: client.py  prompts.py  validator.py
nietzschian_debugger/quotes/: corpus.py  selector.py
nietzschian_debugger/scoring/: behavior_tagger.py  growth_profile.py  skill_scorer.py
nietzschian_debugger/storage/: file_reader.py  session_store.py
nietzschian_debugger/ui/: growth_display.py  renderer.py
specs/1-debug-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: cli.ts  types.ts
src/commands/: debug.ts
src/core/: context-manager.ts  session-loop.ts  session.ts
src/llm/: client.ts  prompts.ts  validator.ts
src/quotes/: corpus.ts  selector.ts
src/scoring/: behavior-tagger.ts  growth-profile.ts  skill-scorer.ts
src/storage/: file-reader.ts  session-store.ts
src/ui/: growth-display.ts  renderer.ts
tests/unit/: context-manager.test.ts  file-reader.test.ts  growth-display.test.ts  growth-profile.test.ts  prompts.test.ts  quote-selector.test.ts  session-store.test.ts  session.test.ts  skill-scorer.test.ts  test_context_manager.py  test_file_reader.py  test_growth_display.py  test_growth_profile.py  test_prompts.py  test_quote_selector.py  test_session.py  test_session_store.py  test_skill_scorer.py  test_validator.py  validator.test.ts
(+7 files in other folders)
